added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css"> 
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -24,7 +25,14 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>Declarations contain the property and the value</li>
+          <li>A stylesheet requires a link to the relevant html file
+          <li>Adding a class attribute as a selector allows you to assign elements to the new rule</li>
+          <li>A external style sheet keeps all CSS rules in an separate external file</li>
+          <li>Group selectors to one CSS rule with a comma for DRY code</li>
+          </li>
         </ul>
       </section>
       <section class="card" id="git-section">
