--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-         <li>Enter your JavaScript notes here</li>
+            <li>A variable is a named container that allows us to store data in our code.</li>
+            <li>Control flow is the order in which a computer executes code in a script.</li>
+            <li>A function does not execute without calling the function by named</li>
+            <li>The console log method makes it easier to debug code</li>
+            <li>Conditonal logic is done through if statements</li>
        </ul>
       </section>
     </main>
